Thorp shuffle prose

--- a/notes/notes.bib
+++ b/notes/notes.bib
@@ -220,3 +220,27 @@ doi = {10.1147/rd.383.0243}
   journal   = {{SIAM} J. Comput.},
   year      = {1988},
 }
+
+@article{Thorp73,
+  title={Nonrandom shuffling with applications to the game of Faro},
+  author={Thorp, Edward O},
+  journal={Journal of the American Statistical Association},
+  year={1973},
+}
+
+@article{NaorReingold99,
+  author    = {Moni Naor and
+               Omer Reingold},
+  title     = {On the Construction of Pseudorandom Permutations: Luby-Rackoff Revisited},
+  journal   = {J. Cryptology},
+  year      = {1999},
+}
+
+@inproceedings{MRS09,
+  author    = {Ben Morris and
+               Phillip Rogaway and
+               Till Stegers},
+  title     = {How to Encipher Messages on a Small Domain},
+  booktitle = {{CRYPTO}},
+  year      = {2009},
+}
