added stprp to tweak ciphers

--- a/notes/defs.tex
+++ b/notes/defs.tex
@@ -1324,7 +1324,7 @@
 \newcommand{\environ}{{Env}}
 \newcommand{\Poracle}{P}
 \newcommand{\Pobject}{P}
-\newcommand{\Horacle}{\mathsf{H}}
+\newcommand{\Hf}{\mathsf{H}}
 \newcommand{\Ooracle}{\mathsf{O}}
 \newcommand{\pOracle}{\textsf{P}}
 \newcommand{\chalOracle}{\mathbb{D}}
@@ -2174,6 +2174,7 @@
 \newcommand{\pairset}{\textsf{PairSet}}
 \newcommand{\TagOracle}{\textnormal{Tag}}
 \newcommand{\VerOracle}{\textnormal{Ver}}
+\newcommand{\TagSim}{\textnormal{TagSim}}
 
 \newcommand{\cAU}{\textnormal{cAU}}
 \newcommand{\AdvcAU}[2]{\Adv^{\mathrm{cau}}_{#1}(#2)}
