--- a/notes/defs.tex
+++ b/notes/defs.tex
@@ -1324,7 +1324,7 @@
 \newcommand{\environ}{{Env}}
 \newcommand{\Poracle}{P}
 \newcommand{\Pobject}{P}
-\newcommand{\Hf}{\mathsf{H}}
+\newcommand{\Horacle}{\mathsf{H}}
 \newcommand{\Ooracle}{\mathsf{O}}
 \newcommand{\pOracle}{\textsf{P}}
 \newcommand{\chalOracle}{\mathbb{D}}
