updated ciphers section 3

--- a/notes/notation.tex
+++ b/notes/notation.tex
@@ -61,7 +61,7 @@ initialized to default values:  integer variables are set
 to 0, arrays are everywhere~$\bot$, etc. Here $\bot$ is a distinguished symbol
 by tradition used to denote an error in the cryptographic literature.
 By distinguished we mean that it assumed to not be used for any other reason,
-not appearing in alphabets over which strings are taken, etc.
+not appearing in alphabets over which strings are taken, etc. We will often use $x \getsr \calX$ to denote that variable $x$ is assigned a value that is sampled uniformly at random from set $\calX$. 
 
 
 \begin{wrapfigure}{r}{3in}
