--- a/notes/notes.bib
+++ b/notes/notes.bib
@@ -244,3 +244,17 @@ doi = {10.1147/rd.383.0243}
   booktitle = {{CRYPTO}},
   year      = {2009},
 }
+
+@misc{BellareBCNotes,
+	title = {UCSD CSE 207, Lecture Notes on Block Ciphers},
+	url = {https://cseweb.ucsd.edu/~mihir/cse207/s-bc.pdf},
+	author = {Bellare, Mihir},
+	month = Mar,
+	year = {2019},
+}
+
+@article{BellareRogawayBook,
+	title = {Introduction to Modern Cryptography},
+	author = {Mihir Bellare and Phillip Rogaway},
+	url = {http://web.cs.ucdavis.edu/~rogaway/classes/227/spring05/book/main.pdf}
+}
