Small proofreader fixes

--- a/notes/prp/exercises.tex
+++ b/notes/prp/exercises.tex
@@ -8,7 +8,9 @@
   \item Show the PRP security of an alternate 3-round Feistel construction $\Feistel:\bits^{3k}\times\bits^{2n}\rightarrow\bits^{2n}$ with round function $\prf:\bits^k \times\bits^n\rightarrow\bits^n$ where each round is keyed by an independent key.
   How does the advantage bound for an adversary against this scheme compare to the bound showed for the round counter scheme?
   \item Consider the following \emph{strong PRP} security games which give the adversary access to both a forward oracle and inverse oracle.
-  Advantage is defined in the same way as regular PRF and PRP security as the distinguishing ability of the adversary between interacting with the cipher and interacting with a random permutation.
+  The distinguishing advantage of an adversary is defined in the same way as regular PRF and PRP security as the ability to distinguish between interacting with the cipher and interacting with a random permutation,
+  $\AdvSPRP{\cipher}{\advA} = \left| \Prob{\SPRP1_\cipher^\advA\Rightarrow 1} - \Prob{\SPRP0_\cipher^\advA\Rightarrow1} \right|$.
+
 
 	\begin{center}
 	\hfpages{.13}{
