--- a/notes/defs.tex
+++ b/notes/defs.tex
@@ -511,17 +511,6 @@
 \newcommand{\nfont}[1]{{\footnotesize #1}}
 \newcommand{\lnum}[1]{{\footnotesize #1}\;\;}
 
-\newcommand{\Keys}{\mathsl{Keys}}
-\newcommand{\Dom}{\mathsl{Dom}}
-\newcommand{\cDom}{\overline{\mathsl{Dom}}}
-\newcommand{\Range}{\mathsl{Rng}}
-\newcommand{\Rng}{\Range}
-\newcommand{\cRng}{\overline{\Range}}
-\newcommand{\DomP}{\mathsl{Dom_P}}
-\newcommand{\RngP}{\mathsl{Rng_P}}
-\newcommand{\Domprog}{\mathsl{Dom_2}}
-\newcommand{\globalinfo}{I}
-
 \newcommand{\ETS}[2]{\cal{ETS}_{#1}^{#2}}
 
 \newcommand{\Exp}{\mathbf{Exp}}
@@ -2055,6 +2044,11 @@
 \newcommand{\ct}{C}
 \newcommand{\randfn}{\rho}
 
+\newcommand{\blockciphers}{\textnormal{BC}}
+\newcommand{\ic}{E}
+\newcommand{\icInv}{D}
+\newcommand{\Domain}{\texttt{Dom}}
+\newcommand{\Range}{\texttt{Ran}}
 
 \newcommand{\TKR}{\textnormal{TKR}} % security game for key recovery
 \newcommand{\Fn}{\textnormal{Fn}}
