--- a/notes/main.tex
+++ b/notes/main.tex
@@ -109,10 +109,9 @@
 \input{msgauth}
 \newpage
 \input{advanced-ae}
+\newpage
+\input{hashfunctions}
 
-
-
->>>>>>> 422b52920aeb9ee7725c0e249d7e3fcbff9cd17a
 
 \printbibliography
 
