added proof for ror-cca of etm

--- a/notes/defs.tex
+++ b/notes/defs.tex
@@ -2160,6 +2160,7 @@
 \newcommand{\EncOracle}{\textnormal{Enc}}
 \newcommand{\DecOracle}{\textnormal{Dec}}
 \newcommand{\EncSim}{\textnormal{EncSim}}
+\newcommand{\DecSim}{\textnormal{DecSim}}
 \newcommand{\Time}{\textsf{T}}
 
 \newcommand{\tildeC}{\tilde{C}}
