Add Phil scribe notes on authenticated encryption in theory and practice

--- a/notes/defs.tex
+++ b/notes/defs.tex
@@ -2173,6 +2173,8 @@
 \newcommand{\cAU}{\textnormal{cAU}}
 \newcommand{\AdvcAU}[2]{\Adv^{\mathrm{cau}}_{#1}(#2)}
 
+\newcommand{\specialcell}[2][c]{%
+  \begin{tabular}[#1]{@{}l@{}}#2\end{tabular}}
 
 
 %%% Local Variables:
