--- a/notes/notes.bib
+++ b/notes/notes.bib
@@ -244,3 +244,87 @@ doi = {10.1147/rd.383.0243}
   booktitle = {{CRYPTO}},
   year      = {2009},
 }
+
+@inproceedings{Bellare2000,
+  title={Authenticated encryption: Relations among notions and analysis of the generic composition paradigm},
+  author={Bellare, Mihir and Namprempre, Chanathip},
+  booktitle={International Conference on the Theory and Application of Cryptology and Information Security},
+  pages={531--545},
+  year={2000},
+  organization={Springer}
+}
+
+@inproceedings{Krawczyk2001,
+  title={The order of encryption and authentication for protecting communications (or: How secure is SSL?)},
+  author={Krawczyk, Hugo},
+  booktitle={Annual International Cryptology Conference},
+  pages={310--331},
+  year={2001},
+  organization={Springer}
+}
+
+@inproceedings{Canvel2003,
+  title={Password interception in a SSL/TLS channel},
+  author={Canvel, Brice and Hiltgen, Alain and Vaudenay, Serge and Vuagnoux, Martin},
+  booktitle={Annual International Cryptology Conference},
+  pages={583--599},
+  year={2003},
+  organization={Springer}
+}
+
+@inproceedings{Fardan2013,
+  title={Lucky thirteen: Breaking the TLS and DTLS record protocols},
+  author={Al Fardan, Nadhem J and Paterson, Kenneth G},
+  booktitle={2013 IEEE Symposium on Security and Privacy},
+  pages={526--540},
+  year={2013},
+  organization={IEEE}
+}
+
+@inproceedings{Rogaway2004,
+  title={Nonce-based symmetric encryption},
+  author={Rogaway, Phillip},
+  booktitle={International Workshop on Fast Software Encryption},
+  pages={348--358},
+  year={2004},
+  organization={Springer}
+}
+
+
+@article{Bellare2004,
+  title={Breaking and provably repairing the SSH authenticated encryption scheme: A case study of the Encode-then-Encrypt-and-MAC paradigm},
+  author={Bellare, Mihir and Kohno, Tadayoshi and Namprempre, Chanathip},
+  journal={ACM Transactions on Information and System Security (TISSEC)},
+  volume={7},
+  number={2},
+  pages={206--241},
+  year={2004},
+  publisher={ACM}
+}
+
+@inproceedings{Albrecht2009,
+  title={Plaintext recovery attacks against SSH},
+  author={Albrecht, Martin R and Paterson, Kenneth G and Watson, Gaven J},
+  booktitle={2009 30th IEEE Symposium on Security and Privacy},
+  pages={16--26},
+  year={2009},
+  organization={IEEE}
+}
+
+@inproceedings{Paterson2010,
+  title={Plaintext-dependent decryption: A formal security treatment of SSH-CTR},
+  author={Paterson, Kenneth G and Watson, Gaven J},
+  booktitle={Annual International Conference on the Theory and Applications of Cryptographic Techniques},
+  pages={345--361},
+  year={2010},
+  organization={Springer}
+}
+
+@inproceedings{Rogaway2006,
+  title={A provable-security treatment of the key-wrap problem},
+  author={Rogaway, Phillip and Shrimpton, Thomas},
+  booktitle={Annual International Conference on the Theory and Applications of Cryptographic Techniques},
+  pages={373--390},
+  year={2006},
+  organization={Springer}
+}
