Changes based on Tom's notes

--- a/notes/notes.bib
+++ b/notes/notes.bib
@@ -345,3 +345,42 @@ doi = {10.1147/rd.383.0243}
   year={2006},
   organization={Springer}
 }
+
+@article{Lacharité2018FSE,
+ title={Frequency-smoothing encryption: preventing snapshot attacks on deterministically encrypted data},
+ volume={2018},
+ url={https://tosc.iacr.org/index.php/ToSC/article/view/852},
+ DOI={10.13154/tosc.v2018.i1.277-313},
+ number={1},
+ journal={IACR Transactions on Symmetric Cryptology},
+ author={Lacharité, Marie-Sarah and Paterson, Kenneth},
+ year={2018},
+}
+
+@InProceedings{Rogaway2002FPE,
+author="Black, John
+and Rogaway, Phillip",
+title="Ciphers with Arbitrary Finite Domains",
+booktitle="Topics in Cryptology --- CT-RSA 2002",
+year="2002",
+publisher="Springer Berlin Heidelberg",
+isbn="978-3-540-45760-2"
+}
+
+@Techreport{ commerce1981FPE,
+	title = "Guidelines for Implementing and Usgin the NBS Data Encryption Standard",
+	author = "US Department of Commerce",
+	year = "1981",
+	month = "April",
+	institution = "US Department of Commerce / National Bureau of Standards",
+	number = "FIPS PUB 74",
+	day = "1",
+}
+
+@article{Brightwell1997FPE,
+author={Michael Brightwell, Harry E. Smith},
+title={Using datatype-preserving encryption to enhance data warehouse security},
+journal={20thNISSC Proceedings},
+year={1997},
+url={http://csrc.nist.gov/nissc/1997}
+}
